# showcase_your_work

./: README.md
bokeh_tut/: tut-1.ipynb
gradio_tut/: pyproject.toml  tut-1.py  tut-2-chatbot.py  tut-3-blocks.py  tut_1.py  tut_2.py  tut_3.py  tut_4_chatbot.py  tut_5_blocks.py
gradio_tut/flagged/: log.csv
plotly_tut/: pyproject.toml  tut_1.py
pyvis_tut/: index.html  pyproject.toml  tut-1.py  tut-2.html  tut-2.py  tut-3.html  tut-3.py  tut-4.py  tut-5.html  tut-5.py  tut-6.html  tut-6.py  tut_1.html  tut_1.py  tut_2.html  tut_2_size_of_node.py  tut_3_nodes.py  tut_4.html  tut_4.py  tut_5.html  tut_5.py
seaborn_tut/: tut-1.ipynb
streamlit/: 3-tut.py
streamlit_tut/: 1-tut.py  2-tut.py  4-tut-slider.py  5-tut-linechart.py  6-tut-selectbox_multiselect.py  7-tut-checkbox.py  hello_world.py
