[tool.poetry]
name = "gradio-tut-1"
version = "0.1.0"
description = ""
authors = ["shubham Mandowara <shubham77mandowara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.44.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
