[tool.poetry]
name = "plotly-tut"
version = "0.1.0"
description = ""
authors = ["shubham Mandowara <shubham77mandowara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
dash = "^2.13.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
